--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <nav>
             <img src="images/logo.svg" alt="logo">
             <ul>
-                <li><a href="#"></a>About</li>
-                <li><a href="#"></a>Services</li>
-                <li><a href="#"></a>Projects</li>
-                <li><a href="#"></a>Contacts</li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Contacts</a></li>
             </ul> 
         </nav>
-            <h1 style="color: white;">We are creatives</h1>
-            <img src="images/icon-arrow-down.svg" alt="arrow down">        
+            <h1 style="color: rgb(255, 255, 255);">We are creatives</h1>
+            <img src="./images/icon-arrow-down.svg" alt="arrow down" class="arrow">        
     </header>
 
     <main>
