--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
                 <li><a href="#">About</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Projects</a></li>
-                <li><a href="#">Contacts</a></li>
+                <li><a href="#"><box>CONTACT</box></a></li>
             </ul> 
         </nav>
             <h1 style="color: rgb(255, 255, 255);">We are creatives</h1>
             <img src="./images/icon-arrow-down.svg" alt="arrow down" class="arrow">        
     </header>
 
-    <main>
+    <main></main>
         <div class="box1"></div>
         <div class="box2"></div>
         <div class="box3"></div>
