--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <img src="./images/icon-arrow-down.svg" alt="arrow down" class="arrow">        
     </header>
 
-    <main></main>
+    <main
         <div class="box1"></div>
         <div class="box2"></div>
         <div class="box3"></div>
